# qml-desktop

./: .gitattributes  .travis.yml  CMakeLists.txt  README.md  qml-desktop.pro
src/desktop/: desktopfile.cpp  desktopfile.h  desktopscrobbler.cpp  desktopscrobbler.h
src/iconhelper/: iconhelper.cpp  iconhelper.h  theme.cpp  theme.h
src/keyeventfilter/: keyeventfilter.cpp
