PROJECT(qml-desktop)

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")

FIND_PACKAGE(Qt5Quick REQUIRED)
FIND_PACKAGE(Qt5DBus REQUIRED)
FIND_PACKAGE(Qt5Qml REQUIRED)
FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(GLIB glib-2.0)

INCLUDE_DIRECTORIES(${GLIB_INCLUDE_DIRS})
LINK_DIRECTORIES(${GLIB_LIBRARY_DIRS})
ADD_DEFINITIONS(${GLIB_CXXFLAGS_OTHER})

EXECUTE_PROCESS(COMMAND qmake -query QT_INSTALL_QML OUTPUT_VARIABLE QT_INSTALL_QML)

ADD_LIBRARY(MaterialDesktop SHARED ${CMAKE_CURRENT_SOURCE_DIR}/src/qmldesktop_plugin.cpp)
TARGET_LINK_LIBRARIES(MaterialDesktop Qt5::Quick)
TARGET_LINK_LIBRARIES(MaterialDesktop Qt5::DBus)
TARGET_LINK_LIBRARIES(MaterialDesktop Qt5::Qml)

SET(FILES_TO_INSTALL ${CMAKE_CURRENT_BINARY_DIR}/libMaterialDesktop.so 
${CMAKE_CURRENT_SOURCE_DIR}/src/qmldir)

INSTALL(FILES ${FILES_TO_INSTALL} DESTINATION ${QT_INSTALL_QML}/Material/Desktop)
